feat: display result

--- a/src/components/Result/Result.scss
+++ b/src/components/Result/Result.scss
@@ -21,4 +21,11 @@
     justify-content: center;
     gap: 35px;
   }
+
+  .loading {
+    font-size: 108px;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 50px;
+  }
 }
