feat: add adaptive

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -17,4 +17,8 @@
   border-radius: 5px;
   color: #FFF;
   background-color: #00A5FF;
+
+  @media screen and (max-width: 480px) {
+    padding: 8px 12px;
+  }
 }
