--- a/src/components/Question/Question.scss
+++ b/src/components/Question/Question.scss
@@ -2,6 +2,10 @@
   font-size: 20px;
   font-weight: 700;
   margin-bottom: 28px;
+
+  @media screen and (max-width: 350px) {
+    font-size: 16px;
+  }
 }
 
 .options {
