--- a/src/components/Quiz/Quiz.scss
+++ b/src/components/Quiz/Quiz.scss
@@ -1,18 +1,34 @@
 .quiz {
   .container {
     padding: 50px 50px 0;
+
+    @media screen and (max-width: 480px) {
+      padding: 30px 30px 0;
+    }
   }
 
   .title {
     font-size: 40px;
     font-weight: 900;
     margin-bottom: 28px;
+
+    @media screen and (max-width: 480px) {
+      font-size: 32px;
+    }
+
+    @media screen and (max-width: 360px) {
+      font-size: 24px;
+    }
   }
 
   .message {
     font-size: 20px;
     margin-bottom: 34px;
     max-width: 580px;
+
+    @media screen and (max-width: 480px) {
+      font-size: 16px;
+    }
   }
 }
 
@@ -23,6 +39,11 @@
   height: 432px;
   padding: 35px;
   position: relative;
+
+  @media screen and (max-width: 480px) {
+    padding: 20px;
+    height: 380px;
+  }
 }
 
 .dots-container {
@@ -53,4 +74,8 @@
   gap: 10px;
   position: absolute;
   bottom: 45px;
+
+  @media screen and (max-width: 480px) {
+    bottom: 20px;
+  }
 }
