--- a/src/components/Result/Result.scss
+++ b/src/components/Result/Result.scss
@@ -37,5 +37,13 @@
     font-weight: 700;
     text-align: center;
     margin-top: 50px;
+
+    @media screen and (max-width: 660px) {
+      font-size: 72px;
+    }
+
+    @media screen and (max-width: 400px) {
+      font-size: 48px;
+    }
   }
 }
